y.output
Terminals unused in grammar

   STRUCT_KEYWORD
   TYPEDEF_KEYWORD
   UNION_KEYWORD


State 356 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: IDENTIFIER
    4                   | INT_CONSTANT
    5                   | FLOAT_CONSTANT
    6                   | CHAR_CONSTANT
    7                   | STRING_LITERAL
    8                   | '(' expression ')'

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression POINTER IDENTIFIER
   15                   | postfix_expression INCREMENT
   16                   | postfix_expression DECREMENT
   17                   | '(' type_specifier ')' '{' initializer_list '}'
   18                   | '(' type_specifier ')' '{' initializer_list ',' '}'

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF_KEYWORD unary_expression
   26                 | SIZEOF_KEYWORD '(' type_specifier ')'

   27 unary_operator: '&'
   28               | '*'
   29               | '+'
   30               | '-'
   31               | '~'
   32               | '!'

   33 cast_expression: unary_expression
   34                | '(' type_specifier ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression '*' cast_expression
   37                          | multiplicative_expression '/' cast_expression
   38                          | multiplicative_expression '%' cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression '+' multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_SHIFT additive_expression
   44                 | shift_expression RIGHT_SHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression LESS_EQUAL shift_expression
   49                      | relational_expression GREATER_EQUAL shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression IS_EQUAL relational_expression
   52                    | equality_expression NOT_EQUAL relational_expression

   53 and_expression: equality_expression
   54               | and_expression '&' equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression '^' and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression '|' exclusive_or_expression

   59 LOGICAL_AND_expression: inclusive_or_expression
   60                       | LOGICAL_AND_expression N LOGICALL_AND M inclusive_or_expression N

   61 logical_or_expression: LOGICAL_AND_expression
   62                      | logical_or_expression N LOGICALL_OR M LOGICAL_AND_expression N

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression N '?' M expression N ':' M conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: '='
   68                    | MULTIPLY_BY
   69                    | DIVIDE_BY
   70                    | MOD_BY
   71                    | AND_EQUAL
   72                    | SUB_BY
   73                    | LEFT_SHIFT_EQUAL
   74                    | RIGHT_SHIFT_EQUAL
   75                    | ADD_BY
   76                    | XOR_EQUAL
   77                    | OR_EQUAL

   78 expression: assignment_expression
   79           | expression ',' assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers ';'
   82            | declaration_specifiers init_declarator_list ';'

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | constant
   86                       | constant declaration_specifiers
   87                       | type_qualifier
   88                       | type_qualifier declaration_specifiers
   89                       | function_specifier
   90                       | function_specifier declaration_specifiers

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: EXTERN_KEYWORD
   96                        | STATIC_KEYWORD
   97                        | AUTO_KEYWORD
   98                        | REGISTER_KEYWORD

   99 constant: VOID_KEYWORD
  100         | CHAR_KEYWORD
  101         | SHORT_KEYWORD
  102         | INT_KEYWORD
  103         | LONG_KEYWORD
  104         | FLOAT_KEYWORD
  105         | DOUBLE_KEYWORD
  106         | SIGNED_KEYWORD
  107         | UNSIGNED_KEYWORD
  108         | BOOL_KEYWORD
  109         | COMPLEX_KEYWORD
  110         | IMAGINARY_KEYWORD
  111         | enum_specifier

  112 specifier_qualifier_list: constant
  113                         | constant specifier_qualifier_list
  114                         | type_qualifier
  115                         | type_qualifier specifier_qualifier_list

  116 enum_specifier: ENUM_KEYWORD '{' enumerator_list '}'
  117               | ENUM_KEYWORD IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD '{' enumerator_list ',' '}'
  119               | ENUM_KEYWORD IDENTIFIER '{' enumerator_list ',' '}'

  120 $@1: %empty

  121 enum_specifier: ENUM_KEYWORD IDENTIFIER $@1

  122 enumerator_list: enumerator
  123                | enumerator_list ',' enumerator

  124 enumerator: enumeration_constant
  125           | enumeration_constant '=' constant_expression

  126 enumeration_constant: IDENTIFIER

  127 type_qualifier: CONST_KEYWORD
  128               | RESTRICT_KEYWORD
  129               | VOLATILE_KEYWORD

  130 function_specifier: INLINE_KEYWORD

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | '(' declarator ')'
  135                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  136                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list_opt assignment_expression ']'
  137                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  138                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  139                  | direct_declarator '(' parameter_type_list_opt ')'
  140                  | direct_declarator '(' identifier_list ')'

  141 assignment_expression_opt: assignment_expression
  142                          | %empty

  143 type_qualifier_list_opt: type_qualifier_list
  144                        | %empty

  145 pointer: '*'
  146        | '*' type_qualifier_list
  147        | '*' pointer
  148        | '*' type_qualifier_list pointer

  149 type_qualifier_list: type_qualifier
  150                    | type_qualifier_list type_qualifier

  151 parameter_type_list_opt: parameter_type_list
  152                        | %empty

  153 parameter_type_list: parameter_list
  154                    | parameter_list ',' ELLIPSIS

  155 parameter_list: parameter_declaration
  156               | parameter_list ',' parameter_declaration

  157 parameter_declaration: declaration_specifiers declarator
  158                      | declaration_specifiers

  159 identifier_list: IDENTIFIER
  160                | identifier_list ',' IDENTIFIER

  161 type_specifier: specifier_qualifier_list

  162 initializer: assignment_expression
  163            | '{' initializer_list '}'
  164            | '{' initializer_list ',' '}'

  165 initializer_list: initializer
  166                 | designation initializer
  167                 | initializer_list ',' initializer
  168                 | initializer_list ',' designation initializer

  169 designation: designator_list '='

  170 designator_list: designator
  171                | designator_list designator

  172 designator: '[' constant_expression ']'
  173           | '.' IDENTIFIER

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 labeled_statement: IDENTIFIER ':' statement
  181                  | CASE_KEYWORD constant_expression ':' statement
  182                  | DEFAULT_KEYWORD ':' statement

  183 compound_statement: '{' '}'
  184                   | '{' block_item_list '}'

  185 block_item_list: block_item
  186                | block_item_list M block_item

  187 block_item: declaration
  188           | statement

  189 expression_statement: ';'
  190                     | expression ';'

  191 selection_statement: IF_KEYWORD '(' expression N ')' M statement N
  192                    | IF_KEYWORD '(' expression N ')' M statement N ELSE_KEYWORD M statement N
  193                    | SWITCH_KEYWORD '(' expression ')' statement

  194 iteration_statement: WHILE_KEYWORD M '(' expression N ')' M statement
  195                    | DO_KEYWORD M statement M WHILE_KEYWORD '(' expression ')' ';'
  196                    | FOR_KEYWORD '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  197                    | FOR_KEYWORD '(' declaration expression_opt ';' expression_opt ')' statement

  198 expression_opt: expression
  199               | %empty

  200 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  201               | CONTINUE_KEYWORD ';'
  202               | BREAK_KEYWORD ';'
  203               | RETURN_KEYWORD ';'
  204               | RETURN_KEYWORD expression ';'

  205 translation_unit: external_declaration
  206                 | translation_unit external_declaration

  207 external_declaration: function_definition
  208                     | declaration

  209 function_definition: declaration_specifiers declarator declaration_list compound_statement
  210                    | declaration_specifiers declarator compound_statement

  211 declaration_list: declaration
  212                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 32
'%' (37) 38
'&' (38) 27 54
'(' (40) 8 11 12 17 18 26 34 134 139 140 191 192 193 194 195 196 197
')' (41) 8 11 12 17 18 26 34 134 139 140 191 192 193 194 195 196 197
'*' (42) 28 36 138 145 146 147 148
'+' (43) 29 40
',' (44) 18 20 79 92 118 119 123 154 156 160 164 167 168
'-' (45) 30 41
'.' (46) 13 173
'/' (47) 37
':' (58) 64 180 181 182
';' (59) 81 82 189 190 195 196 197 200 201 202 203 204
'<' (60) 46
'=' (61) 67 94 125 169
'>' (62) 47
'?' (63) 64
'[' (91) 10 135 136 137 138 172
']' (93) 10 135 136 137 138 172
'^' (94) 56
'{' (123) 17 18 116 117 118 119 163 164 183 184
'|' (124) 58
'}' (125) 17 18 116 117 118 119 163 164 183 184
'~' (126) 31
error (256)
RESTRICT_KEYWORD (258) 128
UNSIGNED_KEYWORD (259) 107
AUTO_KEYWORD (260) 97
ENUM_KEYWORD (261) 116 117 118 119 121
BREAK_KEYWORD (262) 202
EXTERN_KEYWORD (263) 95
RETURN_KEYWORD (264) 203 204
VOID_KEYWORD (265) 99
CASE_KEYWORD (266) 181
FLOAT_KEYWORD (267) 104
SHORT_KEYWORD (268) 101
VOLATILE_KEYWORD (269) 129
CHAR_KEYWORD (270) 100
FOR_KEYWORD (271) 196 197
SIGNED_KEYWORD (272) 106
WHILE_KEYWORD (273) 194 195
CONST_KEYWORD (274) 127
GOTO_KEYWORD (275) 200
SIZEOF_KEYWORD (276) 25 26
BOOL_KEYWORD (277) 108
CONTINUE_KEYWORD (278) 201
IF_KEYWORD (279) 191 192
STATIC_KEYWORD (280) 96 136 137
COMPLEX_KEYWORD (281) 109
DEFAULT_KEYWORD (282) 182
INLINE_KEYWORD (283) 130
STRUCT_KEYWORD (284)
IMAGINARY_KEYWORD (285) 110
DO_KEYWORD (286) 195
INT_KEYWORD (287) 102
SWITCH_KEYWORD (288) 193
DOUBLE_KEYWORD (289) 105
LONG_KEYWORD (290) 103
TYPEDEF_KEYWORD (291)
ELSE_KEYWORD (292) 192
REGISTER_KEYWORD (293) 98
UNION_KEYWORD (294)
IDENTIFIER (295) 3 13 14 117 119 121 126 133 159 160 173 180 200
INT_CONSTANT (296) 4
FLOAT_CONSTANT (297) 5
CHAR_CONSTANT (298) 6
STRING_LITERAL (299) 7
POINTER (300) 14
INCREMENT (301) 15 22
DECREMENT (302) 16 23
LEFT_SHIFT (303) 43
RIGHT_SHIFT (304) 44
LESS_EQUAL (305) 48
GREATER_EQUAL (306) 49
IS_EQUAL (307) 51
NOT_EQUAL (308) 52
LOGICALL_AND (309) 60
LOGICALL_OR (310) 62
ELLIPSIS (311) 154
MULTIPLY_BY (312) 68
DIVIDE_BY (313) 69
MOD_BY (314) 70
AND_EQUAL (315) 71
SUB_BY (316) 72
LEFT_SHIFT_EQUAL (317) 73
RIGHT_SHIFT_EQUAL (318) 74
ADD_BY (319) 75
XOR_EQUAL (320) 76
OR_EQUAL (321) 77


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
M (92)
    on left: 1, on right: 60 62 64 186 191 192 194 195 196
N (93)
    on left: 2, on right: 60 62 64 191 192 194 196
primary_expression (94)
    on left: 3 4 5 6 7 8, on right: 9
postfix_expression (95)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 10 11 12 13 14
    15 16 21
argument_expression_list (96)
    on left: 19 20, on right: 12 20
unary_expression (97)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 66
unary_operator (98)
    on left: 27 28 29 30 31 32, on right: 24
cast_expression (99)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_expression (100)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (101)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (102)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (103)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (104)
    on left: 50 51 52, on right: 51 52 53 54
and_expression (105)
    on left: 53 54, on right: 54 55 56
exclusive_or_expression (106)
    on left: 55 56, on right: 56 57 58
inclusive_or_expression (107)
    on left: 57 58, on right: 58 59 60
LOGICAL_AND_expression (108)
    on left: 59 60, on right: 60 61 62
logical_or_expression (109)
    on left: 61 62, on right: 62 63 64
conditional_expression (110)
    on left: 63 64, on right: 64 65 80
assignment_expression (111)
    on left: 65 66, on right: 19 20 66 78 79 136 137 141 162
assignment_operator (112)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
expression (113)
    on left: 78 79, on right: 8 10 64 79 190 191 192 193 194 195 198
    204
constant_expression (114)
    on left: 80, on right: 125 172 181
declaration (115)
    on left: 81 82, on right: 187 197 208 211 212
declaration_specifiers (116)
    on left: 83 84 85 86 87 88 89 90, on right: 81 82 84 86 88 90 157
    158 209 210
init_declarator_list (117)
    on left: 91 92, on right: 82 92
init_declarator (118)
    on left: 93 94, on right: 91 92
storage_class_specifier (119)
    on left: 95 96 97 98, on right: 83 84
constant (120)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    85 86 112 113
specifier_qualifier_list (121)
    on left: 112 113 114 115, on right: 113 115 161
enum_specifier (122)
    on left: 116 117 118 119 121, on right: 111
$@1 (123)
    on left: 120, on right: 121
enumerator_list (124)
    on left: 122 123, on right: 116 117 118 119 123
enumerator (125)
    on left: 124 125, on right: 122 123
enumeration_constant (126)
    on left: 126, on right: 124 125
type_qualifier (127)
    on left: 127 128 129, on right: 87 88 114 115 149 150
function_specifier (128)
    on left: 130, on right: 89 90
declarator (129)
    on left: 131 132, on right: 93 94 134 157 209 210
direct_declarator (130)
    on left: 133 134 135 136 137 138 139 140, on right: 131 132 135
    136 137 138 139 140
assignment_expression_opt (131)
    on left: 141 142, on right: 135
type_qualifier_list_opt (132)
    on left: 143 144, on right: 135 136 138
pointer (133)
    on left: 145 146 147 148, on right: 131 147 148
type_qualifier_list (134)
    on left: 149 150, on right: 137 143 146 148 150
parameter_type_list_opt (135)
    on left: 151 152, on right: 139
parameter_type_list (136)
    on left: 153 154, on right: 151
parameter_list (137)
    on left: 155 156, on right: 153 154 156
parameter_declaration (138)
    on left: 157 158, on right: 155 156
identifier_list (139)
    on left: 159 160, on right: 140 160
type_specifier (140)
    on left: 161, on right: 17 18 26 34
initializer (141)
    on left: 162 163 164, on right: 94 165 166 167 168
initializer_list (142)
    on left: 165 166 167 168, on right: 17 18 163 164 167 168
designation (143)
    on left: 169, on right: 166 168
designator_list (144)
    on left: 170 171, on right: 169 171
designator (145)
    on left: 172 173, on right: 170 171
statement (146)
    on left: 174 175 176 177 178 179, on right: 180 181 182 188 191
    192 193 194 195 196 197
labeled_statement (147)
    on left: 180 181 182, on right: 174
compound_statement (148)
    on left: 183 184, on right: 175 209 210
block_item_list (149)
    on left: 185 186, on right: 184 186
block_item (150)
    on left: 187 188, on right: 185 186
expression_statement (151)
    on left: 189 190, on right: 176
selection_statement (152)
    on left: 191 192 193, on right: 177
iteration_statement (153)
    on left: 194 195 196 197, on right: 178
expression_opt (154)
    on left: 198 199, on right: 196 197
jump_statement (155)
    on left: 200 201 202 203 204, on right: 179
translation_unit (156)
    on left: 205 206, on right: 0 206
external_declaration (157)
    on left: 207 208, on right: 205 206
function_definition (158)
    on left: 209 210, on right: 207
declaration_list (159)
    on left: 211 212, on right: 209 212


State 0

    0 $accept: . translation_unit $end

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    constant                 go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  128 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 128 (type_qualifier)


State 2

  107 constant: UNSIGNED_KEYWORD .

    $default  reduce using rule 107 (constant)


State 3

   97 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 97 (storage_class_specifier)


State 4

  116 enum_specifier: ENUM_KEYWORD . '{' enumerator_list '}'
  117               | ENUM_KEYWORD . IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD . '{' enumerator_list ',' '}'
  119               | ENUM_KEYWORD . IDENTIFIER '{' enumerator_list ',' '}'
  121               | ENUM_KEYWORD . IDENTIFIER $@1

    IDENTIFIER  shift, and go to state 32
    '{'         shift, and go to state 33


State 5

   95 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 95 (storage_class_specifier)


State 6

   99 constant: VOID_KEYWORD .

    $default  reduce using rule 99 (constant)


State 7

  104 constant: FLOAT_KEYWORD .

    $default  reduce using rule 104 (constant)


State 8

  101 constant: SHORT_KEYWORD .

    $default  reduce using rule 101 (constant)


State 9

  129 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 129 (type_qualifier)


State 10

  100 constant: CHAR_KEYWORD .

    $default  reduce using rule 100 (constant)


State 11

  106 constant: SIGNED_KEYWORD .

    $default  reduce using rule 106 (constant)


State 12

  127 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 127 (type_qualifier)


State 13

  108 constant: BOOL_KEYWORD .

    $default  reduce using rule 108 (constant)


State 14

   96 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


State 15

  109 constant: COMPLEX_KEYWORD .

    $default  reduce using rule 109 (constant)


State 16

  130 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 130 (function_specifier)


State 17

  110 constant: IMAGINARY_KEYWORD .

    $default  reduce using rule 110 (constant)


State 18

  102 constant: INT_KEYWORD .

    $default  reduce using rule 102 (constant)


State 19

  105 constant: DOUBLE_KEYWORD .

    $default  reduce using rule 105 (constant)


State 20

  103 constant: LONG_KEYWORD .

    $default  reduce using rule 103 (constant)


State 21

   98 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 98 (storage_class_specifier)


State 22

  208 external_declaration: declaration .

    $default  reduce using rule 208 (external_declaration)


State 23

   81 declaration: declaration_specifiers . ';'
   82            | declaration_specifiers . init_declarator_list ';'
  209 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  210                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36
    ';'         shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   83 declaration_specifiers: storage_class_specifier .
   84                       | storage_class_specifier . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    constant                 go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   85 declaration_specifiers: constant .
   86                       | constant . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    constant                 go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  111 constant: enum_specifier .

    $default  reduce using rule 111 (constant)


State 27

   87 declaration_specifiers: type_qualifier .
   88                       | type_qualifier . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    constant                 go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   89 declaration_specifiers: function_specifier .
   90                       | function_specifier . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    constant                 go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  206 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 47
    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    constant                 go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  205 translation_unit: external_declaration .

    $default  reduce using rule 205 (translation_unit)


State 31

  207 external_declaration: function_definition .

    $default  reduce using rule 207 (external_declaration)


State 32

  117 enum_specifier: ENUM_KEYWORD IDENTIFIER . '{' enumerator_list '}'
  119               | ENUM_KEYWORD IDENTIFIER . '{' enumerator_list ',' '}'
  121               | ENUM_KEYWORD IDENTIFIER . $@1

    '{'  shift, and go to state 49

    $default  reduce using rule 120 ($@1)

    $@1  go to state 50


State 33

  116 enum_specifier: ENUM_KEYWORD '{' . enumerator_list '}'
  118               | ENUM_KEYWORD '{' . enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 51

    enumerator_list       go to state 52
    enumerator            go to state 53
    enumeration_constant  go to state 54


State 34

  133 direct_declarator: IDENTIFIER .

    $default  reduce using rule 133 (direct_declarator)


State 35

  134 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36

    declarator         go to state 55
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  145 pointer: '*' .
  146        | '*' . type_qualifier_list
  147        | '*' . pointer
  148        | '*' . type_qualifier_list pointer

    RESTRICT_KEYWORD  shift, and go to state 1
    VOLATILE_KEYWORD  shift, and go to state 9
    CONST_KEYWORD     shift, and go to state 12
    '*'               shift, and go to state 36

    $default  reduce using rule 145 (pointer)

    type_qualifier       go to state 56
    pointer              go to state 57
    type_qualifier_list  go to state 58


State 37

   81 declaration: declaration_specifiers ';' .

    $default  reduce using rule 81 (declaration)


State 38

   82 declaration: declaration_specifiers init_declarator_list . ';'
   92 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 59
    ';'  shift, and go to state 60


State 39

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 40

   93 init_declarator: declarator .
   94                | declarator . '=' initializer
  209 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  210                    | declaration_specifiers declarator . compound_statement

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21
    '{'                shift, and go to state 61
    '='                shift, and go to state 62

    $default  reduce using rule 93 (init_declarator)

    declaration              go to state 63
    declaration_specifiers   go to state 64
    storage_class_specifier  go to state 24
    constant                 go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    compound_statement       go to state 65
    declaration_list         go to state 66


State 41
